--- a/learningpage.html
+++ b/learningpage.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lovely Planet</title>
+    <title>GENERATEUR DE PUNCHLINES</title>
     <meta name="description" content="Hello World">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
    <div id="banner">
      <img src="images/logo.png" height="60">
      <b><i>GENERATEUR DE PUNCHLINES</i></b>
-     <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.figma.com%2Fproto%2FJpnY3OQh4UlMjt97MQF0ijLw%2FPunchline-Generator%3Fnode-id%3D0%253A1%26scaling%3Dscale-down&h=AT1pXw3XxmHY8_tnLY3FQdW8XfkZwXTgVlCL3fRsbwWvVNWSWe5U6P_27Lnsk1V8wQBaUqP064K_EORhMtRsS_cTI6OKpS4ofRt2fgZ8F5ne5kQSpFh69rfDxO3sFMqKN9v66Q" target=_blank class="btn btn-danger btn-lg">CONNEXION</a>
+     <a href="https://www.figma.com/proto/JpnY3OQh4UlMjt97MQF0ijLw/Punchline-Generator?node-id=0%3A1&scaling=scale-down" target=_blank class="btn btn-danger btn-lg">CONNEXION</a>
   </div>
 
   <div id="fond">
@@ -115,7 +115,7 @@
 <div style="width: 1200px; padding: 100px;">
   <p>Marre de ne plus savoir quoi dire ? Utilise notre générateur de punchlines pour ne plus laisser de blancs dans ta discussion !</p>
   <br>
-  <center><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.figma.com%2Fproto%2FJpnY3OQh4UlMjt97MQF0ijLw%2FPunchline-Generator%3Fnode-id%3D0%253A1%26scaling%3Dscale-down&h=AT1pXw3XxmHY8_tnLY3FQdW8XfkZwXTgVlCL3fRsbwWvVNWSWe5U6P_27Lnsk1V8wQBaUqP064K_EORhMtRsS_cTI6OKpS4ofRt2fgZ8F5ne5kQSpFh69rfDxO3sFMqKN9v66Q" target=_blank><img src="images/inscription.png" height="80px"></a></center>
+  <center><a href="https://www.figma.com/proto/JpnY3OQh4UlMjt97MQF0ijLw/Punchline-Generator?node-id=0%3A1&scaling=scale-down" target=_blank><img src="images/inscription.png" height="80px"></a></center>
 </div>
 
 
