--- a/learningpage.html
+++ b/learningpage.html
@@ -24,7 +24,7 @@
   <div id="fond">
     <!--<img src="images/fond.png" width=100%>-->
 
-<div class="container-fluid" style="width: 1000px; background-image: url(images/bg.jpg);">
+<div class="container-fluid" style="width: 900px; background-image: url(images/bg.jpg); background-attachment: fixed;border-radius: 30px">
     
 <!-- Carousel container -->
 <div id="my-pics" class="carousel slide" data-ride="carousel" style="width:300px;margin:auto;">
@@ -112,7 +112,7 @@
 
 </div>
 
-<div style="width: 1200px; padding: 100px;">
+<div style="width: 1300px; padding: 100px;">
   <p>Marre de ne plus savoir quoi dire ? Utilise notre générateur de punchlines pour ne plus laisser de blancs dans ta discussion !</p>
   <br>
   <center><a href="https://www.figma.com/proto/JpnY3OQh4UlMjt97MQF0ijLw/Punchline-Generator?node-id=0%3A1&scaling=scale-down" target=_blank><img src="images/inscription.png" height="80px"></a></center>
