banner in front

--- a/learningpage.html
+++ b/learningpage.html
@@ -21,13 +21,17 @@
      <a href="https://www.figma.com/proto/JpnY3OQh4UlMjt97MQF0ijLw/Punchline-Generator?node-id=0%3A1&scaling=scale-down" target=_blank class="btn btn-danger btn-lg">CONNEXION</a>
   </div>
 
+<div style="height: 100px;"></div>
+
   <div id="fond">
     <!--<img src="images/fond.png" width=100%>-->
 
-<div class="container-fluid" style="width: 900px; background-image: url(images/bg.jpg); background-attachment: fixed;border-radius: 30px">
+
+
+<div class="container-fluid" style="width: 40%; background-image: url(images/bg.jpg); background-attachment: fixed;border-radius: 30px">
     
 <!-- Carousel container -->
-<div id="my-pics" class="carousel slide" data-ride="carousel" style="width:300px;margin:auto;">
+<div id="my-pics" class="carousel slide" data-ride="carousel" style="width:300px; margin:auto;">
 
 <!-- Indicators -->
 <ol class="carousel-indicators">
@@ -112,7 +116,7 @@
 
 </div>
 
-<div style="width: 1300px; padding: 100px;">
+<div style="width: 60%; padding: 100px;">
   <p>Marre de ne plus savoir quoi dire ? Utilise notre générateur de punchlines pour ne plus laisser de blancs dans ta discussion !</p>
   <br>
   <center><a href="https://www.figma.com/proto/JpnY3OQh4UlMjt97MQF0ijLw/Punchline-Generator?node-id=0%3A1&scaling=scale-down" target=_blank><img src="images/inscription.png" height="80px"></a></center>
